# django-haystack-opensearch

./: .bumpversion.cfg  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
django_haystack_opensearch/: apps.py  haystack.py  settings.py  urls.py
django_haystack_opensearch/tests/: conftest.py  test_backend_core.py  translating.docx
doc/source/: changelog.rst  conf.py  index.rst
doc/source/api/: backend.rst  models.rst
doc/source/overview/: configuration.rst  demo.rst  faq.rst  installation.rst  quickstart.rst  usage.rst
doc/source/runbook/: contributing.rst
sandbox/: .coveragerc  .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sandbox/data/: henry-v.txt
sandbox/demo/: settings.py  urls.py
sandbox/demo/core/: models.py  search_indexes.py  tests.py  urls.py  views.py  wildewidgets.py
sandbox/demo/core/fixtures/: henry_v.json  macbeth.json
sandbox/demo/core/management/commands/: import_play.py
sandbox/demo/core/migrations/: 0001_initial.py  0002_add_play_and_speech_fields.py  0002_load_henry_v_fixture.py
sandbox/demo/core/templates/core/: home.html  intermediate.html
sandbox/demo/core/templates/search/indexes/core/: play_text.txt
sandbox/demo/users/fixtures/: users.json
sandbox/demo/users/templates/registration/: login.html
sandbox/demo/users/templates/users/: intermediate.html
sandbox/etc/: nginx.conf
sandbox/sql/docker/: init.sql  my-client.cnf  my.cnf
